objects/Request_Action__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fix in progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Waiting for User</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Actions</relationshipLabel>
        <relationshipName>Request_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Responsible</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Request Action</label>
    <nameField>
        <label>Request Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>